--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@hookform/resolvers": "^3.1.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.6",
     "expo": "~48.0.6",
     "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
@@ -20,10 +23,12 @@
     "expo-status-bar": "~1.4.4",
     "native-base": "^3.4.28",
     "react": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-native": "0.71.3",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
