--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "strict": true,
     "baseUrl": "./",
+    "lib": ["ES2017"],
     "paths": {
       "@dtos/*": ["src/dtos/*"],
       "@assets/*": ["./src/assets/*"],
